--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "rest-api-jwt",
   "version": "1.0.0",
-  "description": "",
+  "description": "Node app para control de acceso y roles de usuarios",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.js --exec babel-node",
     "build": "babel src --out-dir build",
     "start": "node build/index.js"
   },
-  "author": "",
+  "author": "Sigma Syd",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
